<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="1">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:text="@string/temperature"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="147dp"
            android:layout_gravity="center_horizontal">

            <TextView
                android:id="@+id/temperature"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/title"
                android:layout_below="@+id/title"
                android:text="@string/calculatedTemp"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@android:color/holo_blue_light"
                android:textSize="@dimen/tempSize" />

            <TextView
                android:id="@+id/chronoText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/title"
                android:layout_below="@+id/title"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@android:color/darker_gray"
                android:textSize="@dimen/tempSize"
                android:visibility="gone"
                android:singleLine="false" />

            <TextView
                android:id="@+id/scaleToggle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/title"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@android:color/holo_blue_light"
                android:textSize="@dimen/tempSize"
                android:text="@string/unit"
                android:layout_toLeftOf="@+id/calcButton"
                android:layout_toRightOf="@+id/title"
                android:layout_toEndOf="@+id/title" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">

            <Button
                android:id="@+id/resetButton"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="@dimen/smallButtonWidth"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/chirpButton"
                android:layout_alignTop="@+id/chirpButton"
                android:text="@string/reset" />

            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Record"
                android:id="@+id/recordButton" />

            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Play"
                android:id="@+id/playButton" />

            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/analyzeString"
                android:id="@+id/analyzeButton" />
        </LinearLayout>

        <Button
            android:id="@+id/chirpButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:text="@string/bigButton"
            android:textSize="@dimen/bigButtonTextSize"
            android:textAlignment="center" />

    </LinearLayout>

    <view
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        class="com.bwisni.chirptemp.Chronometer"
        android:id="@+id/chrono"
        android:visibility="gone" />

</RelativeLayout>